# pdf2epub

./: .env.example  .gitignore  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  README_DEV.md  pyproject.toml  test_manifest_raw.json
pdf2epub/: __init__.py  cli.py  epub_builder.py  gemini_client.py  packager.py  pdf_reader.py  pipeline.py
tests/: test_cover_xhtml.py  test_entity_normalization.py  test_images_embed.py  test_packager.py  test_pipeline_smoke.py  test_smoke.py
